# plr-re

./: .gitignore  APPROACH.md  PI-SETUP.md  PREFLIGHT.md  README.md  bench-kit.md  pyproject.toml
configs/: agilent-pinmap.example.json  aviti.example.json  namocell.example.json  viaflo96.example.json
examples/: README.md  namocell_rehearsal.py
instruments/agilent-6530-qtof/: README.md  WIRING.md
instruments/bd-facsmelody/: README.md
instruments/biotage-v10-touch/: README.md
instruments/element-aviti/: CAPTURE.md  README.md
instruments/integra-viaflo-96/: CAPTURE.md  README.md
instruments/namocell-hana/: CAPTURE.md  README.md
maps/: README.md
plr_re/: __init__.py  capture.py  cli.py  decode.py  guards.py  protocolmap.py  replay.py  transports.py
plr_re/instruments/: __init__.py  agilent6530.py  biotage_v10.py  element_aviti.py  namocell.py  viaflo96.py
plr_re/lab/: __init__.py  executor.py  ledger.py  model.py  protocols.py  registry.py  workcell.py
tests/: test_element_aviti.py  test_lab.py  test_namocell.py  test_plr_re.py  test_usb_transport.py  test_viaflo96.py
